# My-AI-agents-Collection

./: AIAgents.md  Readme.md
1 - search agent/: README.md  main.py  pyproject.toml
1 - search agent/src/configs/llm/: llm_config.py
1 - search agent/src/features/agent/: agent.py
1 - search agent/src/features/agent/prompts/: system_prompt.py
2 - pdf agent/: main.py  pyproject.toml
2 - pdf agent/src/config/: llm_config.py
2 - pdf agent/src/features/agent/: agent.py
2 - pdf agent/src/features/agent/prompts/: system_prompt.py
2 - pdf agent/src/features/agent/schemas/: create_pdf_input.py  edit_pdf_input.py  read_pdf_schema.py
2 - pdf agent/src/features/agent/tools/: create_pdf.py  edit_pdf.py  read_pdf.py  registry.py
4 - jira agent/: .env.example  .gitignore  CoT.md  main.py  pyproject.toml
4 - jira agent/src/configs/llm/: llm_config.py
4 - jira agent/src/features/agent/: agent.py
4 - jira agent/src/features/agent/prompts/: system_prompt.py
4 - jira agent/src/features/agent/schemas/: __init__.py  operation_schemas.py  ticket_schemas.py
4 - jira agent/src/features/agent/tools/: __init__.py  assign_ticket.py  bulk_operations.py  comment_tools.py  create_ticket.py  delete_ticket.py  get_ticket.py  get_tickets.py  project_summary.py  registry.py  search_tickets.py  transition_ticket.py
4 - jira agent/src/shared/: __init__.py  jira_client.py
5 - db-agent/: .env.example  CoT.md  README.md  main.py  pyproject.toml
5 - db-agent/src/configs/llm/: llm_config.py
5 - db-agent/src/features/agent/: agent.py
5 - db-agent/src/features/agent/prompts/: __init__.py  system_prompt.py
5 - db-agent/src/features/agent/schemas/: __init__.py  operation_schemas.py  (+1 more)
5 - db-agent/src/shared/: __init__.py  db_client.py
(+17 files in other folders)
