[project]
name = "2-pdf-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.12",
    "langchain-core>=1.2.19",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.1.2",
    "pydantic>=2.12.5",
    "pypdf2>=3.0.1",
    "reportlab>=4.4.10",
]
